--- a/src/pages/Products.css
+++ b/src/pages/Products.css
@@ -1,19 +1,23 @@
-
+.products-wrapper{
+  display: flex;
+  justify-content: space-around;
+  flex-flow: row wrap;
+}
 
 .products-box{
-    width: 350px;
-    height: 470px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    margin: 12px;
-    text-align: center;
-    border-radius: 5px;
+  width: 350px;
+  height: 470px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  margin: 12px;
+  text-align: center;
+  border-radius: 5px;
 }
 
 .products-img{
-    width: 350px;
-    border-radius:  5px 5px 0px 0px ;
+  width: 350px;
+  height: 320px;
+  border-radius:  5px 5px 0px 0px ;
 }
 p{
-  font-size: 1.5em;
+font-size: 1.5em;
 }
-
