Cart - Work in progress:
- build cart content;
- added Functionality: addProduct, deleteProduct, incrementQuantity/decrement;
- disabled incrementButton;
- added TotalAmout;

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
-.thumbnails:hover {
-    opacity: 40%;
-
-}
-
-.thumbnails {
-    opacity: 100%;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
