--- a/src/pages/Product.css
+++ b/src/pages/Product.css
@@ -2,7 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  max-width: 70vw;
+  margin: 0 auto;
+  /* max-height: 50vh; */
 }
 .single-product-box {
   width: 80vw;
@@ -16,17 +18,38 @@
   align-items: center;
   justify-content: space-around;
 }
-
+.carousel-btn{
+  cursor: pointer;
+  font-size: 1.5em;
+}
 .single-product-images-carousel {
   width: 75%;
-  /* margin-right: 35px; */
   cursor: pointer;
   object-fit: cover;
 }
 
-/* .single-product-images-carousel img{
-   } */
 .single-page-details {
-  width: 550%;
-  padding: 15px;
+  margin-top: -11px;
+  width: 40%;
+  padding-left: 30px;
+}
+
+.single-page-details button{
+  background-color: transparent;
+  border: 1px solid;
+  width: 40%;
+  padding: 8px;
+  margin: 50px 0px;
+  cursor: pointer;
+}
+
+.single-page-details h4{
+  
+  color: 	#343a40;
+  font-size: 1.5em;
+}
+
+.single-page-details h3{
+  
+  font-size: 1.2em;
 }
