--- a/src/pages/Products.css
+++ b/src/pages/Products.css
@@ -18,6 +18,7 @@
   height: 320px;
   border-radius:  5px 5px 0px 0px ;
 }
-product-price{
-font-size: 1.5em;
+#product-price{
+font-size: 1em;
+
 }
