--- a/src/pages/Cataloge.css
+++ b/src/pages/Cataloge.css
@@ -1,7 +1,7 @@
 .Cataloge {
   width: 80vw;
   display: flex;
-  flex-direction: column;
+  flex-direction: column; 
   align-items: center;
   margin: 0 auto;
 }
@@ -9,9 +9,26 @@
   width: 85%;
   height: 300px;
   margin-bottom: 25px;
+  position: relative;
 }
 .cataloge-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.tag {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  z-index: 1000;
+/*   background-color: #92AD40; */ 
+  padding: 2px;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 5rem;
+  
+}
+
+.ti:hover .to{
+  text-decoration: underline;
 }
