--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+body{
+    font-family: 'Abel', sans-serif;
 }
