--- a/src/pages/Cataloge.css
+++ b/src/pages/Cataloge.css
@@ -6,10 +6,11 @@
   margin: 0 auto;
 }
 .cataloge-img {
-  width: 85%;
-  height: 300px;
+  width: 95%;
+  height: 370px;
   margin-bottom: 25px;
   position: relative;
+  
 }
 .cataloge-img img {
   width: 100%;
@@ -18,16 +19,16 @@
 }
 .tag {
   position: absolute;
-  right: 0px;
-  bottom: 0px;
+  right: 85px;
+  bottom: 45px;
   z-index: 1000;
-/*   background-color: #92AD40; */ 
   padding: 2px;
   color: #FFFFFF;
   font-weight: bold;
-  font-size: 5rem;
-  
+  font-size: 4.5em
 }
+
+
 
 .ti:hover .to{
   text-decoration: underline;
