--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,7 +4,9 @@
     list-style: none;
     text-decoration: none;
     align-items: center;
-    width: 90vw;
+    width: 100vw;
+
+
 }
 li a{
     color: black;
@@ -22,4 +24,13 @@ width: 40%;
 
 .nav-log-cart{
    width: 10%;
+}
+
+.nav-logo {
+    height: 100px;
+}
+
+.nav-logo img {
+    height: 100%;
+    width:auto
 }
