--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,118 +1,98 @@
 .BannerLandingLeft {
-    
-    margin-left:0px;
-    background-image:url("../assets/background/Furniture_Gateway_12.webp");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    
-    
+  margin-left: 0px;
+  background-image: url("../assets/background/Furniture_Gateway_12.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
 }
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-   /*  height: 100%; */
-    width: 100%;
-   
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
-
-/* #carousel-img{
-    margin-left: 20px;
-    padding-left: 20px;
+#home-carousel-card{
+    height: 250px;
 }
- */
-
- .rec.rec-arrow {
-    border-radius: 0;
-    color:rgb(250, 250, 251);
-
+.rec.rec-arrow {
+  border-radius: 0;
+  color: rgb(250, 250, 251);
 }
-
-
 
 .rec-carousel-item:focus {
-    border:2px solid red;
-    color:green;
-    outline: none;
-    box-shadow: inset 0 0 1px 1px lightgrey;
+  border: 2px solid red;
+  color: green;
+  outline: none;
+  box-shadow: inset 0 0 1px 1px lightgrey;
 }
 
+button.rec-dot {
+  background-color: rgb(243, 240, 240);
+  box-shadow: 0 0 1px 3px rgba(193, 192, 192, 0.5);
+}
 
-button.rec-dot{
-    background-color: rgb(243, 240, 240);
-    box-shadow: 0 0 1px 3px rgba(193, 192, 192, 0.5);
-  }
-  
-  button.rec-dot:hover, button.rec-dot:active, button.rec-dot:focus  {
-    box-shadow: 0 0 1px 3px rgba(235, 177, 16, 0.5);
-  }
+button.rec-dot:hover,
+button.rec-dot:active,
+button.rec-dot:focus {
+  box-shadow: 0 0 1px 3px rgba(235, 177, 16, 0.5);
+}
 
-  .Landing-section1 {
-    grid-template-columns: 2fr 1fr;
-    height:850px;
-    width: 100vw;
-    margin-bottom:60px;
-    justify-content: center;
-    display: grid;
-    background-color: antiquewhite;
-  }
+.Landing-section1 {
+  grid-template-columns: 2fr 1fr;
+  height: 850px;
+  width: 100vw;
+  margin-bottom: 60px;
+  justify-content: center;
+  display: grid;
+  background-color: antiquewhite;
+}
 .BannerLandingRight {
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-background-color: rgb(233, 218, 193);
-    font-size:2rem;
-    color:black; 
-    height:100%;
-    padding:20px;
-    
-    
-   
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(233, 218, 193);
+  font-size: 2rem;
+  color: black;
+  height: 100%;
+  padding: 20px;
 }
 
 .Inset {
-    border-radius: 30px;
-    height:90%;
-    width: 90%;
-    background-color:rgb(247, 236, 222);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-
+  border-radius: 30px;
+  height: 90%;
+  width: 90%;
+  background-color: rgb(247, 236, 222);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .BannerLandingRight .greetings {
-    font-size: 6rem;
-    font-weight: 300;
-    color:black;
-    line-height: 76px;
-    text-align: center;
-    margin-bottom: 30px;
-    width:70%
+  font-size: 6rem;
+  font-weight: 300;
+  color: black;
+  line-height: 76px;
+  text-align: center;
+  margin-bottom: 30px;
+  width: 70%;
 }
 
 #ShopAll {
-    outline: transparent;
-        background-color:black;
-        background-repeat: no-repeat;
-        cursor: pointer;
-        overflow: hidden;
-       font-size: 1rem;
-       font-weight: bold;
-       border-radius: 8px;
-       padding:50px;
-       padding-top:5px;
-       padding-bottom:5px;
-       color:white;
-       
-    
-
-} 
+  outline: transparent;
+  background-color: black;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  overflow: hidden;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 8px;
+  padding: 50px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: white;
+}
