-added background Img

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,7 @@
 .BannerLandingLeft {
     
     margin-left:0px;
-    background-image:url("../assets/background/Furniture_Gateway_12.webp");
+    background-image:url("../assets/background/croppedBack.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
