--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Abel&display=swap");
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-#root{
-    position:relative;
-    min-height: 100vh;
-
+body {
+  font-family: "Abel", sans-serif;
 }
 
-body{
-    font-family: 'Abel', sans-serif;
-    position: relative;
+.App {
+  position: relative;
+  min-height: 100vh;
+}
+
+.main {
+    padding-bottom: 250px;
 }
