--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -3,13 +3,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height:300px;
+    height: 250px;
     align-items: center;
     margin-top: 20px;
-    left:0;
-    right:0;
-    bottom: 0;
     position: absolute;
+    bottom: 0;
+    width: 100vw;
+    
 
 }
 
