-changed the css from the src to styles folder -fixed footer contact from -added the navbar component into the Home -erased the navbar -fixed the paths for the css imports

--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,6 +1,4 @@
 .BannerLandingLeft {
-
-    
     margin-left:0px;
     background-image:url("../assets/background/croppedBack.jpeg");
     background-repeat: no-repeat;
@@ -8,15 +6,23 @@
     background-position: center;
     width: 100%;
     height: 100%;
-    
+}
+
+#homeCorner {
+  position:absolute;
+  top:0;
+  left:0
 
 }
+
+
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
+  min-height: 100vh;
 }
 #home-carousel-card{
     height: 250px;
@@ -51,14 +57,14 @@ button.rec-dot:focus {
   margin-bottom: 60px;
   justify-content: center;
   display: grid;
-  background-color: antiquewhite;
+  background-color: rgb(121, 95, 61);
 }
 .BannerLandingRight {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(233, 218, 193);
+  background-color:rgb(187,187,187);
   font-size: 2rem;
   color: black;
   height: 100%;
@@ -69,7 +75,7 @@ button.rec-dot:focus {
   border-radius: 30px;
   height: 90%;
   width: 90%;
-  background-color: rgb(247, 236, 222);
+  background-color: rgb(238,238,238);
   display: flex;
   flex-direction: column;
   align-items: center;
