--- a/src/style/About.css
+++ b/src/style/About.css
@@ -5,6 +5,15 @@
   flex-direction: column;
   align-items: center;
 }
+
+#aboutCorner{
+  position:absolute;
+  top:0;
+  left:0
+
+}
+
+
 .about-content {
   width: 90%;
   height: 320px;
