--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,17 +1,40 @@
 .footer {
-    background-color: rgb(247, 236, 222);
+    background-color:rgb(204,204,204);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 250px;
+    height: 500px;
     align-items: center;
     margin-top: 20px;
     position: absolute;
-    bottom: 0;
+    bottom: -230px;
     width: 100vw;
     
 
 }
+.common {
+    padding-top: 5px;
+    padding-bottom: 10px;
+    border-radius: 4px;
+    width: 400px;
+    
+  }
+
+  
+
+
+.common::placeholder { opacity: 1; }
+
+.contactUsForm {
+    position:absolute;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+}
+
+
 
 .titles {
     font-size: 1.5em;
@@ -55,10 +78,21 @@
     font-size: 0.8rem;
     margin: 0;
     padding: 0;
+    position:relative;
+    top: 60px;
 }
 .Cont_SocialMedia_foot{
     display: flex;
     justify-content: space-between;
     width: 85%;
+    position:relative;
+    top: 240px;
+    
 
+}
+
+.contactUsForm {
+    background-color:rgb(221,221,221);
+    height:300px;
+    width: 100%;
 }
