--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -32,6 +32,7 @@
     align-items: center;
     justify-content: center;
     width: 300px;
+    
 }
 
 
@@ -79,20 +80,28 @@
     margin: 0;
     padding: 0;
     position:relative;
-    top: 60px;
+    top: 80px;
 }
 .Cont_SocialMedia_foot{
     display: flex;
     justify-content: space-between;
     width: 85%;
     position:relative;
-    top: 240px;
+    top: 180px;
     
 
 }
 
 .contactUsForm {
     background-color:rgb(221,221,221);
-    height:300px;
+    height:230px;
     width: 100%;
+    position:absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.shopByCate {
+    display:inline-block;
+    height:10px}
