--- a/src/style/Products.css
+++ b/src/style/Products.css
@@ -10,7 +10,21 @@
   width: 350px;
   height: 430px;
   margin-bottom: 10px;
+  position: relative;
+
 }
+.wishlist-btn{
+  position: absolute;
+  right: 10px;
+  top: 3px;
+  z-index: 1500;
+  font-size: 2.2em;
+  color: white;
+  /* background-color: aliceblue; */
+  cursor: pointer;
+ 
+}
+
 
 .products-img {
   width: 350px;
