--- a/src/style/Cataloge.css
+++ b/src/style/Cataloge.css
@@ -1,7 +1,7 @@
 .Cataloge {
   width: 80vw;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   align-items: center;
   margin: 0 auto;
 }
@@ -10,7 +10,6 @@
   height: 370px;
   margin-bottom: 25px;
   position: relative;
-  
 }
 .cataloge-img img {
   width: 100%;
@@ -23,13 +22,11 @@
   bottom: 45px;
   z-index: 1000;
   padding: 2px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: bold;
-  font-size: 4.5em
+  font-size: 4.5em;
 }
 
-
-
-.ti:hover .to{
+.ti:hover .to {
   text-decoration: underline;
 }
