--- a/src/style/Cataloge.css
+++ b/src/style/Cataloge.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 auto;
+  margin: 35px auto;
 }
 .cataloge-img {
   width: 95%;
