--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,55 +1,20 @@
-.BannerLandingLeft {
-  margin-left: 0px;
-  background-image: url("../assets/background/croppedBack.jpeg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 100%;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  min-height: 100vh;
-}
-#home-carousel-card {
-  margin: 0 20px;
-}
-.rec.rec-arrow {
-  border-radius: 0;
-  color: rgb(250, 250, 251);
-}
-
-.rec-carousel-item:focus {
-  border: 2px solid red;
-  color: green;
-  outline: none;
-  box-shadow: inset 0 0 1px 1px lightgrey;
-}
-
-button.rec-dot {
-  background-color: rgb(243, 240, 240);
-  box-shadow: 0 0 1px 3px rgba(193, 192, 192, 0.5);
-}
-
-button.rec-dot:hover,
-button.rec-dot:active,
-button.rec-dot:focus {
-  box-shadow: 0 0 1px 3px rgba(235, 177, 16, 0.5);
-}
 
 .Landing-section1 {
-  grid-template-columns: 2fr 1fr;
-  height: 850px;
   width: 100vw;
+  height: 90vh;
+  display: flex;
+  flex-direction: row;
   margin-bottom: 60px;
   justify-content: center;
-  display: grid;
-  background-color: rgb(121, 95, 61);
+ 
+}
+.BannerLandingLeft {
+  background-image: url("../assets/background/croppedBack.jpeg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 75%;
+ 
 }
 .BannerLandingRight {
   display: flex;
@@ -59,14 +24,14 @@ button.rec-dot:focus {
   background-color: rgb(187, 187, 187);
   font-size: 2rem;
   color: black;
+  width: 30%;
   height: 100%;
   padding: 20px;
 }
-
 .Inset {
-  border-radius: 30px;
-  height: 90%;
-  width: 90%;
+  border-radius: 28px;
+  height: 92%;
+  width: 92%;
   background-color: rgb(238, 238, 238);
   display: flex;
   flex-direction: column;
@@ -78,23 +43,70 @@ button.rec-dot:focus {
   font-size: 6rem;
   font-weight: 300;
   color: black;
-  line-height: 76px;
+  line-height: 75px;
   text-align: center;
   margin-bottom: 30px;
   width: 70%;
 }
 
 #ShopAll {
-  outline: transparent;
   background-color: black;
-  background-repeat: no-repeat;
   cursor: pointer;
-  overflow: hidden;
   font-size: 1rem;
   font-weight: bold;
   border-radius: 8px;
-  padding: 50px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding: 8px 40px;
   color: white;
+  margin-top: 4em;
 }
+
+.home-carousel {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#home-carousel-card-box{
+  position: relative;
+}
+
+
+#home-arrows-carousel{
+  margin: 0em;
+  background-color: transparent;
+  border: none;
+  border: 0;
+  cursor: pointer;
+}
+#home-carousel-card{
+  margin-bottom: 0.2em;
+}
+.home-carousel-img{
+  width: 100%
+  
+}
+.rec.rec-arrow {
+  border-radius: 0;
+  color: rgb(250, 250, 251);
+}
+
+.rec-carousel-item:focus {
+  border: 2px solid red;
+  color: green;
+  outline: none;
+  box-shadow: inset 0 0 1px 1px lightgrey;
+} 
+button.rec-dot {
+  background-color: rgb(243, 240, 240);
+  box-shadow: 0 0 1px 2px rgba(193, 192, 192, 0.5);
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+button.rec-dot:hover,
+button.rec-dot:active,
+button.rec-dot:focus {
+  box-shadow: 0 0 1px 1px #5f7470;
+}
+
