--- a/src/style/Pagination.css
+++ b/src/style/Pagination.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap'); 
+
 .Numero {
   font-size: 2em;
   width: 60px;
@@ -7,6 +9,8 @@
   align-content: center;
   padding: 5px;
   cursor: pointer;
+  margin-bottom: 30px;
+  font-family: 'Playfair Display', serif;
 }
 
 .Numero:hover {
