--- a/src/style/Products.css
+++ b/src/style/Products.css
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: space-around;
   flex-flow: row wrap;
-  margin: 0 auto;
+  margin:0 auto;
   width: 77vw;
+  margin-top: 35px;
 }
 
 .products-box {
@@ -20,7 +21,6 @@
   z-index: 1500;
   font-size: 2.2em;
   color: white;
-  /* background-color: aliceblue; */
   cursor: pointer;
  
 }
