--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,4 +1,3 @@
-
 .BannerLandingLeft {
   margin-left: 0px;
   background-image: url("../assets/background/collov-home-design-H-1j_s0dhCw-unsplash\ \(1\).jpg");
@@ -8,7 +7,6 @@
   width: 100%;
   height: 100%;
 }
-
 
 .container {
   display: flex;
@@ -44,7 +42,6 @@ button.rec-dot:focus {
   box-shadow: 0 0 1px 3px rgba(235, 177, 16, 0.5);
 }
 
-
 .Landing-section1 {
   width: 100vw;
   height: 90vh;
@@ -52,7 +49,6 @@ button.rec-dot:focus {
   flex-direction: row;
   margin-bottom: 60px;
   justify-content: center;
- 
 }
 
 .BannerLandingRight {
@@ -89,7 +85,6 @@ button.rec-dot:focus {
 }
 
 #ShopAll {
-
   background-color: black;
   cursor: pointer;
   font-size: 1rem;
@@ -107,24 +102,22 @@ button.rec-dot:focus {
   align-items: center;
 }
 
-#home-carousel-card-box{
+#home-carousel-card-box {
   position: relative;
 }
 
-
-#home-arrows-carousel{
+#home-arrows-carousel {
   margin: 0em;
   background-color: transparent;
   border: none;
   border: 0;
   cursor: pointer;
 }
-#home-carousel-card{
+#home-carousel-card {
   margin-bottom: 0.2em;
 }
-.home-carousel-img{
-  width: 100%
-  
+.home-carousel-img {
+  width: 100%;
 
   background-color: transparent;
   border: 1px solid;
@@ -132,7 +125,6 @@ button.rec-dot:focus {
   padding: 8px;
   cursor: pointer;
   font-size: 1rem;
-
 }
 .rec.rec-arrow {
   border-radius: 0;
@@ -144,7 +136,7 @@ button.rec-dot:focus {
   color: green;
   outline: none;
   box-shadow: inset 0 0 1px 1px lightgrey;
-} 
+}
 button.rec-dot {
   background-color: rgb(243, 240, 240);
   box-shadow: 0 0 1px 2px rgba(193, 192, 192, 0.5);
@@ -157,4 +149,3 @@ button.rec-dot:active,
 button.rec-dot:focus {
   box-shadow: 0 0 1px 1px #5f7470;
 }
-
