updates: - responsive: Rgister, Cart; - Cart/Wishlist -added text when it empty; - Animation Catalogue; - debug concole; - ProductPage - icon fucntionality - done;

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,6 @@
 
 body {
   font-family: "Exo 2", sans-serif;
-  /* height: 100vh;
-  width: 100vw; */
 }
 
 .App {
@@ -21,3 +19,8 @@ body {
   padding-bottom: 250px;
   
 }
+ .toaster-alert{
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  color: black;
+  padding: 8px 15px;
+ }
