--- a/src/style/Cataloge.css
+++ b/src/style/Cataloge.css
@@ -1,32 +1,72 @@
 .Cataloge {
-  width: 80vw;
+  width: 78%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 35px auto;
+  margin: 5em auto;
 }
 .cataloge-img {
   width: 95%;
-  height: 370px;
-  margin-bottom: 25px;
+  height: 25em;
+  margin-bottom: 2em;
   position: relative;
+  border-radius: 2px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
 .cataloge-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 2px;
 }
 .tag {
-  position: absolute;
+  background-image: linear-gradient(
+    to right,
+    #ffffff,
+    #ffffff 50%,
+    #ffffff 50%
+  );
+  background-size: 200% 100%;
+  background-position: -100%;
+  display: inline-block;
+  /* padding: 5px 0; */
+  position: relative;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.3s ease-in-out;
+  position: absolute !important;
   right: 85px;
-  bottom: 45px;
+  bottom: 47px;
   z-index: 1000;
-  padding: 2px;
+  /* padding: 2px; */
   color: #ffffff;
   font-weight: bold;
-  font-size: 4.5em;
+  font-size: 3.5em;
+}
+.tag:before {
+  content: "";
+  background: #ffffff;
+  display: block;
+  position: absolute;
+  bottom: 1px;
+  left: 0;
+  width: 0;
+  height: 3px;
+  transition: all 0.3s ease-in-out;
 }
 
-.ti:hover .to {
+.tag:hover {
+  background-position: 0;
+}
+
+.tag:hover::before {
+  width: 100%;
+}
+
+/* .ti:hover .to {
   text-decoration: underline;
 }
+.cataloge-icon{
+  width: 2em;
+} */
