--- a/src/style/Product.css
+++ b/src/style/Product.css
@@ -3,8 +3,9 @@
   justify-content: center;
   align-items: center;
   max-width: 70vw;
-  margin: 3em auto;
-  padding-bottom: 75px;
+  height: 90vh;
+  margin: 0 auto;
+  padding-bottom: 5%;
 }
 .single-product-box {
   width: 80vw;
