--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 body {
   font-family: var(--ff-primary);
   font-weight: 400;
-  font-size: 1.3135rem;
+/*   font-size: 1.3135rem; */
   line-height:1.6;
 }
 
@@ -58,6 +58,7 @@ p {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   color: black;
   padding: 8px 15px;
+  
  
  }
 
