--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -85,8 +85,8 @@ font-family: "Dancing Script", cursive;}
 #ShopAll {
   background-color: black;
   cursor: pointer;
-  font-size: 1rem;
-  font-weight: bold;
+  font-size: x-large;
+  font-weight:400;
   border-radius: 8px;
   padding: 8px 40px;
   color: white;
