--- a/src/style/Register.css
+++ b/src/style/Register.css
@@ -1,10 +1,11 @@
 .Registration {
-  width: 80vw;
-  height: 90vh;
-  margin: 2em auto;
+  width: 80%;
+  height: 85vh;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: top;
   padding-bottom: 2em;
   
 }
